callPhantom renamed to callAriel

--- a/test/lib/www/regression/pjs-13551/child1a.html
+++ b/test/lib/www/regression/pjs-13551/child1a.html
@@ -6,7 +6,7 @@
     }
     window.onload = function () {
         document.getElementById("execute").onclick = execute;
-        window.callPhantom(1);
+        window.callAriel(1);
     }
 </script>
 <button id="execute">Execute test</button>
