--- a/test/lib/www/regression/pjs-13551/closing-parent.html
+++ b/test/lib/www/regression/pjs-13551/closing-parent.html
@@ -11,13 +11,13 @@
         if (event.data == "execute") {
             var element = document.getElementById("target");
             element.parentNode.removeChild(element);
-            window.callPhantom(2);
+            window.callAriel(2);
         }
     }
     window.addEventListener("message", receiveMessage, false);
     window.onload = function () {
         document.getElementById("prepare").onclick = createIframe;
-        window.callPhantom(0);
+        window.callAriel(0);
     }
 </script>
 <button id="prepare">Prepare the iframe</button>
