--- a/test/lib/www/regression/pjs-13551/reloading-parent.html
+++ b/test/lib/www/regression/pjs-13551/reloading-parent.html
@@ -16,7 +16,7 @@
     window.addEventListener("message", receiveMessage, false);
     window.onload = function () {
         document.getElementById("prepare").onclick = createIframe;
-        window.callPhantom(0);
+        window.callAriel(0);
     }
 </script>
 <button id="prepare">Prepare the iframe</button>
