--- a/test/lib/www/regression/pjs-13551/child2.html
+++ b/test/lib/www/regression/pjs-13551/child2.html
@@ -3,7 +3,7 @@
 <title></title>
 <script>
     window.onload = function () {
-        window.top.callPhantom(2);
+        window.top.callAriel(2);
     }
 </script>
 <p>success</p>
