Info about phasing out x86

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: PhantomJS
 ---
 
+<h1 style="color:red">We are slowly phasing out x86 architecture.</h1>
 <h2>PhantomJS is an optimal solution for</h2>
 
 <div id="feature-01" class="feature grid_3 alpha">
